Updated components, adding basic unencrypted auth
